# COIN_NET

./: .gitignore  Cargo.toml
configs/: Bootstrap.json  node.json
input_testing/: Cargo.toml  index3.html
input_testing/src/: main.rs
input_testing/src/static/: index.html  script.js  styles.css
input_testing2/: Cargo.toml
input_testing2/src/: main.rs
input_testing2/src/static/: index.html  script.js
net_tester/: Cargo.toml
net_tester/src/: main  main.rs
net_tester2/: Cargo.toml
net_tester2/src/: main.rs
signing_test/: Cargo.toml  delete.json
signing_test/src/: main.rs
src/: bootstrap.rs  lib.rs  main  messages.rs  miner.rs  network.rs  node.rs  transactions.rs  ui.rs
src/static/: index.html  script.js
