[package]
name = "Coin"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.42", features = ["full"]}
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.10"
rand = "0.9"
chrono = "0.4"

[[bin]]
name = "node"
path = "src/node.rs"

[[bin]]
name = "boot"
path = "src/bootstrap.rs"