[package]
name = "input_testing2"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.42", features = ["full"]}
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.10"
rand = "0.9"
chrono = "0.4"

axum = "0.8"
tower = "0.5"
tower-http = {version = "0.6", features = ["fs", "cors"]}
open = "5.0"